--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@intuit/semantic-release-slack",
-  "description": "Post slack notifications to a webhook on success or failure of a semantic-release job",
-  "version": "1.0.6",
+  "name": "semantic-release-mixpanel",
+  "description": "Create an annotation in Mixpanel from a new release",
+  "version": "1.0.0",
   "engines": {
     "node": ">=8"
   },
@@ -12,12 +12,9 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "author": "David Aghassi",
   "repository": {
-    "url": "git@github.com:intuit/semantic-release-slack.git"
+    "url": "git@github.com:AnandChowdhary/semantic-release-mixpanel.git"
   },
-  "scripts": {
-    "lint": "yarn eslint *.js",
-    "test": "jest tests"
-  },
+  "scripts": {},
   "dependencies": {
     "@atomist/slack-messages": "1.1.1",
     "@semantic-release/error": "2.2.0",
@@ -26,25 +23,5 @@
     "node-emoji": "1.10.0",
     "node-fetch": "2.6.7",
     "read-pkg-up": "5.0.0"
-  },
-  "devDependencies": {
-    "@commitlint/config-conventional": "8.3.6",
-    "@semantic-release/git": "7.0.18",
-    "@semantic-release/github": "5.5.8",
-    "@semantic-release/npm": "5.3.5",
-    "commitlint": "8.3.6",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "6.15.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "23.20.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-prettier": "3.4.1",
-    "eslint-plugin-react": "7.29.4",
-    "husky": "3.1.0",
-    "jest": "24.9.0",
-    "lint-staged": "9.5.0",
-    "prettier": "1.17.1",
-    "semantic-release": "15.14.0"
   }
 }
